MODON MRE BPDEV/force-app/main/default/objects/ServiceAction__c/ServiceAction__c.object-meta.xml
<CustomObject>
    <label>Service Action</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>