MODON MRE BPDEV/force-app/main/default/objects/ServiceAction__c/fields/AssignmentRule__c.field-meta.xml
<CustomField>
    <fullName>AssignmentRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment Rule</label>
    <referenceTo>AssignmentRule__c</referenceTo>
    <relationshipLabel>Service Actions</relationshipLabel>
    <relationshipName>Service_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>