MODON MRE BPDEV/force-app/main/default/objects/ServiceAction__c/fields/AssignmentRuleProcessName__c.field-meta.xml
<CustomField>
    <fullName>AssignmentRuleProcessName__c</fullName>
    <label>Assignment Rule Process Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Finance Team</fullName>
            </value>
            <value>
                <fullName>Finance-Post Sales Payment Deferral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>