MODON MRE BPDEV/force-app/main/default/objects/ServiceAction__c/fields/CaseTeamRole__c.field-meta.xml
<CustomField>
    <fullName>CaseTeamRole__c</fullName>
    <label>Case Team Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Sales Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>