MODON MRE BPDEV/force-app/main/default/objects/ServiceAction__c/fields/CustomAssignment__c.field-meta.xml
<CustomField>
    <fullName>CustomAssignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Assignment</label>
    <type>Checkbox</type>
</CustomField>