MODON MRE BPDEV/force-app/main/default/objects/ServiceAction__c/fields/DefaultOwnerId__c.field-meta.xml
<CustomField>
    <fullName>DefaultOwnerId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Default Owner Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>