MODON MRE BPDEV/force-app/main/default/objects/ServiceAction__c/fields/DocumentsValidationAtClosure__c.field-meta.xml
<CustomField>
    <fullName>DocumentsValidationAtClosure__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Documents Validation at Closure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>