MODON MRE BPDEV/force-app/main/default/objects/ServiceAction__c/fields/Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>