MODON MRE BPDEV/force-app/main/default/objects/ServiceAction__c/fields/Escalation_3_Name__c.field-meta.xml
<CustomField>
    <fullName>Escalation_3_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escalation 3 Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Actions2</relationshipName>
    <type>Lookup</type>
</CustomField>