MODON MRE BPDEV/force-app/main/default/objects/ServiceAction__c/fields/Escalation_3_SLA__c.field-meta.xml
<CustomField>
    <fullName>Escalation_3_SLA__c</fullName>
    <label>Escalation 3 SLA</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>