MODON MRE BPDEV/force-app/main/default/objects/ServiceAction__c/fields/FinalTask__c.field-meta.xml
<CustomField>
    <fullName>FinalTask__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Task</label>
    <type>Checkbox</type>
</CustomField>