MODON MRE BPDEV/force-app/main/default/objects/ServiceAction__c/fields/Is_Sub_Task__c.field-meta.xml
<CustomField>
    <fullName>Is_Sub_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sub Task</label>
    <type>Checkbox</type>
</CustomField>