MODON MRE BPDEV/force-app/main/default/objects/ServiceAction__c/fields/IsOwnerUpdatedFromSR__c.field-meta.xml
<CustomField>
    <fullName>IsOwnerUpdatedFromSR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Owner Updated From SR?</label>
    <type>Checkbox</type>
</CustomField>