MODON MRE BPDEV/force-app/main/default/objects/ServiceAction__c/fields/IsPaymentClear__c.field-meta.xml
<CustomField>
    <fullName>IsPaymentClear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPaymentClear</label>
    <type>Checkbox</type>
</CustomField>