MODON MRE BPDEV/force-app/main/default/objects/ServiceAction__c/fields/Next_Step_c__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Next_Step__c</label>
    <type>Checkbox</type>
</CustomField>