MODON MRE BPDEV/force-app/main/default/objects/ServiceAction__c/fields/No_Of_Due_Days__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Due_Days__c</fullName>
    <label>No Of Due Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>