MODON MRE BPDEV/force-app/main/default/objects/ServiceAction__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>