MODON MRE BPDEV/force-app/main/default/objects/ServiceAction__c/fields/ServiceCatalog__c.field-meta.xml
<CustomField>
    <fullName>ServiceCatalog__c</fullName>
    <label>Service Catalog</label>
    <referenceTo>ServiceCatalog__c</referenceTo>
    <relationshipLabel>Service Actions</relationshipLabel>
    <relationshipName>Service_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>