MODON MRE BPDEV/force-app/main/default/objects/ServiceAction__c/fields/SR_Type__c.field-meta.xml
<CustomField>
    <fullName>SR_Type__c</fullName>
    <label>SR Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed Registration</fullName>
            </value>
            <value>
                <fullName>New Sale</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>