MODON MRE BPDEV/force-app/main/default/objects/ServiceAction__c/fields/Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Task Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>