MODON MRE BPDEV/force-app/main/default/objects/ServiceAction__c/fields/TaskSubject__c.field-meta.xml
<CustomField>
    <fullName>TaskSubject__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Task Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>