MODON MRE BPDEV/force-app/main/default/objects/ServiceAction__c/fields/TaskSubType__c.field-meta.xml
<CustomField>
    <fullName>TaskSubType__c</fullName>
    <label>Task Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Sale Payment Deferral</fullName>
            </value>
            <value>
                <fullName>Post Sale Payment Deferral</fullName>
            </value>
            <value>
                <fullName>CRM Team Task</fullName>
            </value>
            <value>
                <fullName>Finance Team Task</fullName>
            </value>
            <value>
                <fullName>Check Payment Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>