MODON MRE BPDEV/force-app/main/default/objects/ServiceAction__c/fields/TaskType__c.field-meta.xml
<CustomField>
    <fullName>TaskType__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Sale Payment Deferral</fullName>
            </value>
            <value>
                <fullName>Post Sale Payment Deferral</fullName>
            </value>
            <value>
                <fullName>Joint Owner Addition Service Request</fullName>
            </value>
            <value>
                <fullName>Case Process</fullName>
                <isActive>false</isActive>
                <label>Case Process</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>