MODON MRE BPDEV/force-app/main/default/objects/ServiceAction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ServiceCatalog__c</columns>
    <columns>AssignmentRule__c</columns>
    <columns>CustomAssignment__c</columns>
    <columns>DefaultOwnerId__c</columns>
    <columns>Order__c</columns>
    <columns>Task_Name__c</columns>
    <columns>TaskSubject__c</columns>
    <columns>TaskType__c</columns>
    <columns>Description__c</columns>
    <columns>FollowAssignmentRule__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>