MODON MRE BPDEV/force-app/main/default/objects/ServiceAction__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>ServiceCatalog__c</columns>
    <columns>SR_Type__c</columns>
    <columns>Task_Name__c</columns>
    <columns>TaskSubType__c</columns>
    <columns>TaskType__c</columns>
    <columns>Order__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>